# global-asset-allocator

./: .gitignore  ALLOCATOR_PLAN.md  README.md  RESEARCH_ROADMAP.md  pyproject.toml
archive/: ALLOCATOR_ENGINEERING_GUIDE.md  BACKTEST BRIEF.md
config/: api_credentials.example.yaml  backtest.yaml  holdings.example.yaml  params.yaml  satellite.yaml
data/raw/cape/: shiller_cape.csv
data/raw/etf/: CN.csv  CN_GOVT.csv  CORP_BOND.csv  DM.csv  EM_BOND.csv  GOLD.csv  HK.csv  TIPS.csv  US.csv  all_etf_returns.csv
data/raw/fx/: fx_rates.csv
data/raw/macro/: CPIAUCSL.csv  INDPRO.csv  macro_indicators.csv
scripts/: analyze_ewma_response.py  compare_execution.py  current_allocation.py  fetch_data.py  fetch_proxy_data.py  freeze_params.py  monthly_ops.py  run_backtest.py  satellite_allocation.py  verify_holdings.py
src/backtest/: __init__.py  active_sleeve.py  config.py  schema.py
src/backtest/benchmarks/: anchor_only.py  equal_weight.py  static_60_40.py
src/backtest/data/: _constants.py  build_processed.py  csv_provider.py  download.py  generate_synthetic.py  monthly.py  provider.py
src/backtest/engine/: anchor.py  backtest_loop.py  cost.py  ewma.py  execution.py  layer0.py  layer1.py  layer2.py  quadrant.py  risk_to_cash.py  signals.py
tests/: __init__.py  conftest.py  test_active_sleeve.py  test_anchor.py  test_benchmarks.py  test_config_hash.py  test_cost_conservation.py  test_invariants.py  test_layer0.py  test_layer1.py  test_layer2.py  test_market_data_integrity.py  test_monthly_ops.py  test_no_lookahead.py  test_returns_pipeline.py
(+6 files in other folders)
