[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "global-asset-allocator-backtest"
version = "0.1.0"
description = "宏观叠加层回测引擎 — Layer 0-2 + 全 ETF"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "yfinance>=0.2.30",
    "requests>=2.31",
    "openpyxl>=3.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
